--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "node",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node .",
     "dev": "nodemon",
     "build": "tsc"
   },
@@ -14,12 +15,14 @@
   "dependencies": {
     "chalk": "^4.1.2",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
