--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
@@ -25,6 +26,7 @@
     "@types/cors": "^2.8.17",
     "@types/debug": "^4.1.12",
     "@types/express": "^4.17.21",
+    "@types/joi": "^17.2.3",
     "@types/morgan": "^1.9.9",
     "nodemon": "^3.0.2",
     "ts-node-dev": "^2.0.0",
